# scintegration

./: LICENSE  README.md  pyproject.toml  scintegration_example.ipynb  scintegration_example_aging_pbmc.ipynb  setup.py
scintegration/: __init__.py  core.py  evaluator.py  metrics.py  normalization.py  tasks.py  utils.py  visualization.py
tests/: __init__.py  conftest.py  test_core.py  test_evaluator.py  test_normalization.py  test_utils.py
